--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,11 @@
   transition: right 0.5s;
 }
 
+.submenu2{
+  left: 0;
+  margin-left: 1rem;
+}
+
 .actions {
   height: 25%;
   font-size: 2.2vh;
