--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,1 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
+@font-face {
+  font-family: "Anton";
+  src: url("./../fonts/anton.ttf");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url("./../fonts/poppins.ttf");
+  font-display: swap;
+}
