--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,10 @@
   background-color: #ffffff;
 }
 
+.light-black {
+  background-color: #181818;
+}
+
 .opacity:hover {
   opacity: 0.8;
 }
@@ -60,6 +64,12 @@
 
 .hidden {
   display: none;
+}
+
+.line {
+  width: 95%;
+  height: 0.2vh;
+  margin: 0.5vh 0 1vh 0;
 }
 
 .touch {
@@ -149,4 +159,26 @@
 
 .burger-menu {
   width: 50vh;
+  padding: 0.5vh 2vh 0.5vh 2vh;
+}
+
+.title-option {
+  font-size: 2.5vh;
+}
+
+.subtitle-option{
+  font-size: 2vh;
+}
+
+.container-buttons{
+  width: 11.5vh;
+  bottom: 0;
+  right: 0;
+  margin-right: 1.5vh;
+  margin-bottom: 1.5vh;
+}
+
+.options-button{
+  width: 5vh;
+  height: 3vh;
 }
