--- a/css/main.css
+++ b/css/main.css
@@ -9,9 +9,19 @@
   height: 82%;
 }
 
+#burger-button,
+.container-form-buttons {
+  margin: 0 1.5vh 1.5vh 0;
+}
+
 .burger-menu,
 .burger-checkbox:checked ~ .burger-menu {
   transition-duration: 0.5s;
+}
+
+.disabled,
+.opacity:hover {
+  opacity: 0.8;
 }
 
 .red {
@@ -54,10 +64,6 @@
   background-color: #181818;
 }
 
-.opacity:hover {
-  opacity: 0.8;
-}
-
 .overflow-hidden {
   overflow: hidden;
 }
@@ -66,7 +72,15 @@
   display: none;
 }
 
-.line {
+.unresizable {
+  resize: none;
+}
+
+.radius-button {
+  border-radius: 0.7vh;
+}
+
+.horizontal-line {
   width: 95%;
   height: 0.2vh;
   margin: 0.5vh 0 1vh 0;
@@ -84,8 +98,16 @@
   color: white;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .anton {
   font-family: "Anton";
+}
+
+.small-fontsize {
+  font-size: 1.6vh;
 }
 
 .medium-fontsize {
@@ -122,7 +144,7 @@
 
 .reset-icon {
   width: 2.5vh;
-  margin: 0.5rem 0 0 0.5rem;
+  margin: 1vh 0 0 1vh;
 }
 
 #timer {
@@ -145,8 +167,6 @@
 #burger-button {
   width: 4vh;
   height: 4vh;
-  border-radius: 0.7vh;
-  margin: 0 1.5vh 1.5vh 0;
 }
 
 .burger-icon {
@@ -162,23 +182,62 @@
   padding: 0.5vh 2vh 0.5vh 2vh;
 }
 
-.title-option {
+.form-burger {
+  width: 96%;
+}
+
+.line {
+  margin: 1.5vh 0 1.5vh 0;
+}
+
+.container-section {
+  gap: 1vh;
+}
+
+.title-option-fontsize {
   font-size: 2.5vh;
 }
 
-.subtitle-option{
-  font-size: 2vh;
+.subtitle-option-fontsize {
+  font-size: 2.1vh;
 }
 
-.container-buttons{
+.input-form-container {
+  margin: 1vh 0 0 0;
+  gap: 2vh;
+}
+
+.subcontainer-form {
+  gap: 0.3vh;
+}
+
+.subtitle-side {
+  margin-left: 0.7vh;
+}
+
+#message {
+  margin: 0.7vh 0 0.4vh 0;
+}
+
+.container-form-buttons {
   width: 11.5vh;
-  bottom: 0;
-  right: 0;
-  margin-right: 1.5vh;
-  margin-bottom: 1.5vh;
 }
 
-.options-button{
+.options-button {
   width: 5vh;
   height: 3vh;
+}
+
+.extra-data-container {
+  margin: 0 1vh 0.2vh 1vh;
+}
+
+.penguin-logo {
+  width: 6vh;
+}
+
+.vertical-line {
+  width: 0.2vh;
+  height: 5vh;
+  margin: 0 1vh 0 0.6vh;
 }
