--- a/css/position.css
+++ b/css/position.css
@@ -1,10 +1,18 @@
 #burger-button,
-.burger-menu {
+.burger-menu,
+.container-form-buttons,
+.extra-data-container {
   bottom: 0;
 }
 
+.reset,
+.extra-data-container {
+  left: 0;
+}
+
 #burger-button,
-.burger-checkbox:checked ~ .burger-menu {
+.burger-checkbox:checked ~ .burger-menu,
+.container-form-buttons {
   right: 0;
 }
 
@@ -54,7 +62,6 @@
 
 .reset {
   top: 0;
-  left: 0;
 }
 
 .submenu {
@@ -62,6 +69,6 @@
 }
 
 .burger-menu {
- right: 0;
+  right: -60vh;
   z-index: 1;
 }
