--- a/css/responsive.css
+++ b/css/responsive.css
@@ -3,6 +3,26 @@
     font-size: 13.5vh;
   }
 
+  .reset-icon {
+    width: 3vh;
+  }
+
+  #timer {
+    margin-bottom: 4vh;
+  }
+
+  .submenu {
+    width: 21vh;
+  }
+
+  .icon-submenu {
+    width: 2vh;
+  }
+
+  .submenu-fontsize {
+    font-size: 2.5vh;
+  }
+
   .change-scores {
     flex-direction: column-reverse;
   }
