Improve alert queue behaviour

--- a/css/main.css
+++ b/css/main.css
@@ -161,6 +161,7 @@
 }
 
 .alert {
+  font-size: 1.8vh;
   padding: 0.7vh 1vh 0.7vh 1vh;
   border-top-right-radius: 1vh;
   transition: bottom 0.6s;
