--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 950px) {
+@media screen and (max-width: 1080px) {
   .medium-fontsize {
     font-size: 13.5vh;
   }
@@ -7,8 +7,19 @@
     width: 3vh;
   }
 
+  .alert{
+    width: 100%;
+    height: 5.5vh;
+    border-top-right-radius: 0;
+  }
+
   #timer {
     margin-bottom: 4vh;
+  }
+ 
+  #burger-button{
+    top: 0;
+    margin-top: 1.2vh;
   }
 
   .submenu {
