--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,21 @@
   opacity: 0.8;
 }
 
+.alert,
+.small-alert {
+  font-size: 1.8vh;
+  padding: 0.7vh 1vh 0.7vh 1vh;
+  border-top-right-radius: 1vh;
+  transition: bottom 0.6s;
+}
+
+/* Hide spinbox from input number in browsers */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  -o-appearance: none;
+}
+
 .outline {
   outline: 0.4vh solid rgba(0, 0, 0, 0);
 }
@@ -160,13 +175,6 @@
   margin: 1vh 0 0 1vh;
 }
 
-.alert {
-  font-size: 1.8vh;
-  padding: 0.7vh 1vh 0.7vh 1vh;
-  border-top-right-radius: 1vh;
-  transition: bottom 0.6s;
-}
-
 .tiny-square {
   width: 4vh;
   height: 4vh;
@@ -254,13 +262,6 @@
 
 .mode:checked {
   background-color: #51864b;
-}
-
-/* Hide spinbox from input number in browsers */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  -o-appearance: none;
 }
 
 /* Hide spinbox from input number in Firefox */
