--- a/css/responsive.css
+++ b/css/responsive.css
@@ -7,7 +7,7 @@
     width: 3vh;
   }
 
-  .alert{
+  .alert {
     width: 100%;
     height: 5.5vh;
     border-top-right-radius: 0;
@@ -16,13 +16,14 @@
   #timer {
     margin-bottom: 4vh;
   }
- 
-  #burger-button{
+
+  #burger-button {
     top: 0;
-    margin-top: 1.2vh;
+    margin-top: 1.3vh;
   }
 
   .submenu {
+    bottom: 2.3vh;
     width: 21vh;
   }
 
