--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,33 @@
+/* https://github.com/j-alarcon */
 .half-width,
 .left-side,
 .right-side {
   width: 50%;
 }
 
+.input-form,
+.options-button {
+  width: 7vh;
+}
+
+.tiny-square,
+#burger-button {
+  width: 4vh;
+}
+
+.tiny-square,
+#burger-button {
+  height: 4vh;
+}
+
 .main-container,
 .burger-menu {
   height: 82%;
+}
+
+.vertical-line,
+#t-message {
+  height: 5vh;
 }
 
 #burger-button,
@@ -21,7 +42,6 @@
 
 .alert,
 .small-alert {
-  font-size: 1.8vh;
   padding: 0.7vh 1vh 0.7vh 1vh;
   border-top-right-radius: 1vh;
   transition: bottom 0.6s;
@@ -32,6 +52,13 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   -o-appearance: none;
+}
+
+.alert,
+.small-alert,
+#t-message,
+.options-button {
+  font-size: 1.8vh;
 }
 
 .outline {
@@ -175,11 +202,6 @@ input::-webkit-inner-spin-button {
   margin: 1vh 0 0 1vh;
 }
 
-.tiny-square {
-  width: 4vh;
-  height: 4vh;
-}
-
 #timer {
   margin-bottom: 2.6vh;
   font-size: 10vh;
@@ -195,11 +217,6 @@ input::-webkit-inner-spin-button {
 
 .submenu-fontsize {
   font-size: 2vh;
-}
-
-#burger-button {
-  width: 4vh;
-  height: 4vh;
 }
 
 .burger-icon {
@@ -223,10 +240,6 @@ input::-webkit-inner-spin-button {
   margin: 1.5vh 0 1.5vh 0;
 }
 
-.container-section {
-  gap: 1vh;
-}
-
 .title-option-fontsize {
   font-size: 2.5vh;
 }
@@ -241,7 +254,6 @@ input::-webkit-inner-spin-button {
 }
 
 .input-form {
-  width: 7vh;
   height: 3vh;
 }
 
@@ -270,10 +282,8 @@ input[type="number"] {
 }
 
 #t-message {
-  height: 5vh;
   margin: 1vh 0 0.4vh 0;
   padding: 0.2vh 0.5vh 0.2vh 0.5vh;
-  font-size: 1.8vh;
 }
 
 .container-form-buttons {
@@ -281,9 +291,7 @@ input[type="number"] {
 }
 
 .options-button {
-  width: 7vh;
   height: 3.3vh;
-  font-size: 1.8vh;
 }
 
 .extra-data-container {
@@ -296,6 +304,5 @@ input[type="number"] {
 
 .vertical-line {
   width: 0.2vh;
-  height: 5vh;
   margin: 0 1vh 0 0.6vh;
 }
