--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,11 @@
+/* https://github.com/j-alarcon */
 @media screen and (max-width: 1080px) {
+  .alert,
+  .left-side,
+  .right-side {
+    width: 100%;
+  }
+
   .medium-fontsize {
     font-size: 13.5vh;
   }
@@ -8,7 +15,6 @@
   }
 
   .alert {
-    width: 100%;
     height: 5.5vh;
     border-top-right-radius: 0;
   }
@@ -33,11 +39,6 @@
 
   .submenu-fontsize {
     font-size: 2.5vh;
-  }
-
-  .left-side,
-  .right-side {
-    width: 100%;
   }
 
   .change-scores {
