Change black tone

--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ input::-webkit-inner-spin-button {
 }
 
 .black {
-  background-color: #000000;
+  background-color: rgb(15, 14, 14);
 }
 
 .pink {
