--- a/css/position.css
+++ b/css/position.css
@@ -27,7 +27,7 @@
 .submenu,
 #burger-button,
 .reset {
-  z-index: 2;
+  z-index: 1;
 }
 
 .flex,
@@ -87,6 +87,6 @@
   bottom: 2.5vh;
 }
 
-.alert-container, .alert {
-  z-index: 1;
+.alert {
+  z-index: 2;
 }
