--- a/css/responsive.css
+++ b/css/responsive.css
@@ -48,9 +48,22 @@
 }
 
 @media screen and (max-width: 600px) {
+  .small-fontsize {
+    font-size: 1.9vh;
+  }
+
   .medium-fontsize {
     font-size: 11vh;
   }
+
+  .options-button {
+    font-size: 2vh;
+  }
+
+  .subtitle-option-fontsize {
+    font-size: 2.4vh;
+  }
+
   .burger-menu {
     width: 100%;
   }
