--- a/css/main.css
+++ b/css/main.css
@@ -255,7 +255,7 @@ input::-webkit-inner-spin-button {
 
 .subcontainer-form {
   gap: 0.3vh;
-  margin-bottom: .5vh;
+  margin-bottom: 0.5vh;
 }
 
 .subtitle-side {
@@ -296,8 +296,8 @@ input[type="number"] {
 }
 
 .penguin-logo {
-  width: 6vh;
-  margin-bottom: 0.3vh;
+  margin-top: 0.2vh;
+  width: 5.5vh;
 }
 
 .vertical-line {
