--- a/css/main.css
+++ b/css/main.css
@@ -208,11 +208,11 @@ input::-webkit-inner-spin-button {
 }
 
 .icon-submenu {
-  width: 2.2vh;
+  width: 2.4vh;
 }
 
 .submenu-fontsize {
-  font-size: 2.2vh;
+  font-size: 2.3vh;
 }
 
 .burger-icon {
@@ -255,7 +255,7 @@ input::-webkit-inner-spin-button {
 
 .subcontainer-form {
   gap: 0.3vh;
-  margin-bottom: 0.5vh;
+  margin-bottom: .5vh;
 }
 
 .subtitle-side {
@@ -296,7 +296,7 @@ input[type="number"] {
 }
 
 .penguin-logo {
-  margin-top: 0.2vh;
+  margin-top: .2vh;
   width: 5.5vh;
 }
 
