--- a/css/fonts.css
+++ b/css/fonts.css
@@ -4,3 +4,9 @@
   src: url("./../fonts/anton.ttf");
   font-display: swap;
 }
+
+@font-face {
+  font-family: "Ubuntu";
+  src: url("./../fonts/ubuntu.ttf");
+  font-display: swap;
+}
