--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,10 @@ input::-webkit-inner-spin-button {
   background-color: #181818;
 }
 
+.hide {
+  display: none;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
