--- a/css/main.css
+++ b/css/main.css
@@ -10,11 +10,6 @@
   width: 4vh;
 }
 
-.reset-icon,
-.edit-icon {
-  width: 2.5vh;
-}
-
 .tiny-square,
 #burger-button {
   height: 4vh;
@@ -209,8 +204,17 @@ input::-webkit-inner-spin-button {
   margin: 1vh 0 0 1vh;
 }
 
+.reset-icon {
+  width: 2.5vh;
+}
+
 .edit {
-  margin: 1vh 0 0 4.5vh;
+  margin-bottom: 2vh;
+  margin-right: 7vh;
+}
+
+.edit-icon {
+  width: 3vh;
 }
 
 #timer {
