Force teams names to uppercase

--- a/css/main.css
+++ b/css/main.css
@@ -156,6 +156,10 @@ input::-webkit-inner-spin-button {
   text-align: left;
 }
 
+.mayus{
+  text-transform: uppercase;
+}
+
 .anton {
   font-family: "Anton";
 }
