--- a/css/position.css
+++ b/css/position.css
@@ -51,6 +51,10 @@
   flex-direction: column;
 }
 
+.column-reverse{
+  flex-direction: column-reverse;
+}
+
 .justify-center {
   justify-content: center;
 }
