--- a/css/main.css
+++ b/css/main.css
@@ -249,13 +249,18 @@ input::-webkit-inner-spin-button {
   width: 5.8vh;
 }
 
+.container-timer{
+  height: 14.5vh;
+}
+
 #timer {
-  font-size: 12.5vh;
-  margin-bottom: 3.5vh;
+  font-size: 12vh;
+  height: 10.5vh;
 }
 
 .submenu {
   width: 19.5vh;
+  height: 3vh;
 }
 
 .icon-submenu {
@@ -263,7 +268,7 @@ input::-webkit-inner-spin-button {
 }
 
 .submenu-fontsize {
-  font-size: 2.7vh;
+  font-size: 3vh;
 }
 
 .burger-checkbox:checked ~ .top-container .burger-icon {
