--- a/css/responsive.css
+++ b/css/responsive.css
@@ -42,31 +42,7 @@
 
   #burger-button {
     top: 0;
-    margin-right: 1.3vh;
-    margin-top: 1.3vh;
-  }
-
-  .container-timer {
-    height: 14.5vh;
-    margin-bottom: 0.3vh;
-  }
-
-  #timer {
-    font-size: 12vh;
-    height: 10.5vh;
-  }
-
-  .submenu {
-    width: 24vh;
-    height: 2.9vh;
-  }
-
-  .icon-submenu {
-    width: 2.8vh;
-  }
-
-  .submenu-fontsize {
-    font-size: 3vh;
+    margin: 1.3vh 1.3vh 0 0;
   }
 
   .edit {
@@ -79,14 +55,14 @@
 }
 
 @media screen and (max-width: 600px) {
-  .tiny-name-fontsize,
-  .special-name-fontsize {
-    font-size: 2.3vh;
-  }
-
   .small-name-fontsize,
   .subtitle-option-fontsize {
     font-size: 2.4vh;
+  }
+
+  .tiny-name-fontsize,
+  .special-name-fontsize {
+    font-size: 2.3vh;
   }
 
   .normal-name-fontsize {
