--- a/css/responsive.css
+++ b/css/responsive.css
@@ -107,20 +107,17 @@
 }
 
 @media screen and (max-width: 440px) {
+  .input-form-container,
+  .container-form-buttons {
+    gap: 0;
+  }
+
   .line {
     margin: 1vh 0 1vh 0;
   }
 
   .subcontainer-form {
-    margin-bottom: 0;
-  }
-
-  .input-form {
-    height: 4vh;
-  }
-
-  .container-form-buttons {
-    gap: 0;
+    margin: 0 2vh 0 0;
   }
 
   .options-button {
