--- a/css/responsive.css
+++ b/css/responsive.css
@@ -106,6 +106,25 @@
   }
 }
 
+@media screen and (max-height: 450px) and (orientation: landscape) {
+  .input-form-container,
+  .container-form-buttons {
+    gap: 0;
+  }
+
+  .line {
+    margin: 1vh 0 1vh 0;
+  }
+
+  .subcontainer-form {
+    margin: 0 2vh 0 0;
+  }
+
+  .options-button {
+    margin: 0 0.8vh 0 0.8vh;
+  }
+}
+
 @media screen and (max-width: 440px) {
   .input-form-container,
   .container-form-buttons {
@@ -113,14 +132,14 @@
   }
 
   .line {
-    margin: .8vh 0 .8vh 0;
+    margin: 0.8vh 0 0.8vh 0;
   }
 
   .subcontainer-form {
     margin: 0 2vh 0 0;
   }
 
-  .input-form{
+  .input-form {
     height: 0;
     padding: 2vh;
   }
