--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,4 +1,4 @@
-/* https://github.com/j-alarcon */
+/* https://yarduon.com */
 @font-face {
   font-family: "Anton";
   src: url("./../fonts/anton.ttf");
