Improve iOS appareance

--- a/css/main.css
+++ b/css/main.css
@@ -312,7 +312,6 @@ input::-webkit-inner-spin-button {
 
 .input-form-container {
   margin: 1vh 0 0 0;
-  gap: 2vh;
 }
 
 .formdata-fontsize {
@@ -326,8 +325,7 @@ input::-webkit-inner-spin-button {
 }
 
 .subcontainer-form {
-  gap: 0.3vh;
-  margin-bottom: 0.5vh;
+  margin: 0 2vh 0.5vh 0;
 }
 
 .subtitle-side {
@@ -337,7 +335,7 @@ input::-webkit-inner-spin-button {
 .checkbox {
   width: 1.7vh;
   height: 1.7vh;
-  margin-right: 0.2vh;
+  margin-right: 0.7vh;
   border-radius: 0.3vh;
 }
 
@@ -373,10 +371,10 @@ input[type="number"] {
 
 .container-form-buttons {
   margin-right: 2.6vh;
-  gap: 1.5vh;
 }
 
 .options-button {
+  margin: 0 0 0 2vh;
   padding: 0 1vh 0 1vh;
   height: 3.3vh;
 }
