--- a/css/responsive.css
+++ b/css/responsive.css
@@ -58,7 +58,8 @@
   }
 
   .input-form {
-    padding: 2.3vh 0 2.3vh 0;
+    font-size: 2.5vh;
+    padding: 2.2vh 0 2.2vh 0;
   }
 }
 
@@ -116,20 +117,11 @@
 
 @media screen and (max-width: 440px),
   screen and (max-height: 450px) and (orientation: landscape) {
-  .input-form-container,
-  .container-form-buttons {
-    gap: 0;
-  }
-
   .line {
-    margin: 0.7vh 0 0.7vh 0;
+    margin: 0.6vh 0 0.6vh 0;
   }
 
-  .subcontainer-form {
-    margin: 0 2vh 0 0;
-  }
-
-  .options-button {
-    margin: 0 0.8vh 0 0.8vh;
+  .input-form {
+    height: 0;
   }
 }
