--- a/css/responsive.css
+++ b/css/responsive.css
@@ -102,12 +102,12 @@
   }
 
   #timer {
-    font-size: 12vh;
-    height: 11vh;
+    font-size: 11vh;
+    height: 9.5vh;
   }
 
-  .icon-submenu {
-    width: 2.4vh;
+  .submenu{
+    height: 2.8vh;
   }
 
   .burger-menu {
